--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
 		"grunt": "^0.4.5",
 		"grunt-cli": ">=0.1.13",
 		"grunt-contrib-jshint": "^0.10.0"
+	},
+	"scripts": {
+		"test": "grunt --verbose"
 	}
 }
