--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"devDependencies": {
 		"grunt": "^0.4.5",
 		"grunt-cli": ">=0.1.13",
-		"grunt-contrib-jshint": "^0.10.0"
+		"grunt-contrib-concat": "^0.4.0",
+		"grunt-ts": "^1.11.3"
 	},
 	"scripts": {
 		"test": "grunt --verbose"
