--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-	"name": "kurahenPremium",
-	"version": "1.3.1",
-	"devDependencies": {
-		"grunt": "^0.4.5",
-		"grunt-cli": ">=0.1.13",
-		"grunt-contrib-concat": "^0.4.0",
-		"grunt-ts": "^1.11.3"
-	},
-	"scripts": {
-		"test": "grunt --verbose"
-	}
+  "name": "kurahenPremium",
+  "version": "1.3.1",
+  "repository": {
+    "type": "git",
+	"url": "https://github.com/kucanon/Kurahen-Premium.git"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-string-replace": "^0.2.7",
+    "grunt-ts": "^1.11.3"
+  },
+  "scripts": {
+    "test": "grunt --verbose"
+  }
 }
