--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kurahenPremium",
-  "version": "1.4.0-pre",
+  "version": "1.4.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/Kurahen-Premium/Kurahen-Premium.git"
